<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="59dp"
        android:text="@string/account_name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="121dp"
        android:text="@string/password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="68dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-4dp"

        android:layout_marginEnd="68dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="173dp"
        android:layout_marginEnd="100dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="130dp"
        android:text="@string/noaccount"
        android:textSize="15sp" />

</RelativeLayout>

