<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="59dp"
        android:text="@string/email"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="121dp"
        android:text="@string/password"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="175dp"
        android:text="@string/confirmPassword"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="68dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="68dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/passwordEdit2"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="68dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="243dp"
        android:layout_marginEnd="113dp"
        android:text="@string/register" />

</RelativeLayout>
